[project]
name = "hiera-eyaml"
version = "0.1.0"
description = "Python library for encrypting and decrypting hiera-eyaml YAML files"
readme = "README.md"
authors = [
    { name = "Bernardo Vale", email = "bernardo@kentik.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
    "mypy>=1.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
